update: Name in component Library

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Component Library</title>
 </head>
 <body>
-    <h1>Yash Malhotra's Component Library</h1>
+    <h1>Yash's Component Library</h1>
     <p>I am attending neog.camp and I want to make a library 
     which would make all my projects look good and consistent. </p>
    
