--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+    <!--<style>
+        body{
+            color: red;
+        }
+    </style>-->
+<!--Third way of doing CSS: external link-->
+<link href ="style.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Yash's Component Library</h1>
-    <p>I am attending neog.camp and I want to make a library 
+    <h1 id ="lib-header"><!--style = "color : red"-->  Yash's Component Library</h1>
+    <p class = "para">I am attending neog.camp and I want to make a library 
     which would make all my projects look good and consistent. </p>
    
    <hr>
@@ -31,7 +38,7 @@
     to fill in. It is not a best practice. -->
 
     <h3>Fluid Container</h3>
-    <div>This is a fluid container and it will go till the end of the page</div>
+    <div class = "para">This is a fluid container and it will go till the end of the page</div>
 
      <h3>center Container</h3>
     <div>This is a centered container and it will go till the specified width</div>
