--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <header class="hero">
         <img class="hero-img" src="images/hero_image.svg" />
         <!--<img src ="https://pbs.twimg.com/profile_banners/1311566029/1584937993/1500x500" />-->
-        <h1 class="hero-heading">Yash Malhotra the <span class="heading-inverted">Web Developer</span> </h1>
+        <h1 class="hero-heading"> Yash Malhotra the <span class="heading-inverted">Web Developer</span> </h1>
         <!--span is like an inline <div> tag -->
     </header>
 
@@ -140,19 +140,18 @@
         </div>
     </section>
     <hr>
-
+    <!--In footer try we don't use <h1> & <h2> orr headings specifically -->
     <h2>@footer</h2>
 
-    <footer>
-        <!--In footer try we don't use <h1> & <h2>-->
+    <footer class="footer">
         <div>Some small heading inside footer</div>
-        <ul>
-            <li>socialOne</li>
-            <li>socialTwo</li>
-            <li>social</li>
+        <ul class="list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="/">socialone</a></li>
+            <li class="list-item-inline"><a class="link" href="/">socialtwo</a></li>
+            <li class="list-item-inline"><a class="link" href="/">socialthree</a></li>
+            <li class="list-item-inline"><a class="link" href="/">socialfour</a></li>
         </ul>
     </footer>
-
 </body>
 
 </html>
