--- a/index.html
+++ b/index.html
@@ -5,153 +5,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component Library</title>
-    <!--Method1 of doing CSS/Add ing style-->
-    <!--<style> 
-        body{
-            color: red;
-        }
-    </style>-->
-    <!--Third way of doing CSS: external link-->
-    <link href="style.css" rel="stylesheet" />
+    <title>Home | Yash Malhotra.Dev</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link href="/style.css" rel="stylesheet" />
 </head>
 
 <body>
-    <h1>
-        <!--style = "color : red"-->
-        <!--Method 2 of CSS -->Yash's Component Library</h1>
-    <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent. </p>
-
-    <hr>
-
-    <h2>@typography</h2>
-
-    <h1>This is the biggest heading </h1>
-    <h2>This is the second biggest heading </h2>
-    <p>Let me show you the normal text. This is free flowing and will wrap at the end like a paragraph.</p>
-    <p>This paragraph will have a <strong>bold</strong> text.</p>
-    <small>This is relatively smaller text</small> <small>This is relatively smaller text</small>
-
-    <hr>
-
-    <h2>@continer</h2>
-
-    <!--  Container have No meaning to anyone seeing the website, It is an empty space 
-    and hence <div> tag can be used. 
-    NOTE:- We cannot use div tag everywhere where there is an empty space or a paragraph.
-    to fill in. It is not a best practice. -->
-
-    <h3>fluid container</h3>
-    <div class="container">This is a fluid container and it will go till the end of the page</div>
-
-    <h3>center container</h3>
-    <div class="container container-center">This is a centered container and it will go till the specified width</div>
-
-    <hr>
-
-    <h2>@links</h2>
-
-    <a class="link link-primary" href="/">Primary Link</a>
-    <a class="link link-secondary" href="/">Secondary Link</a>
-
-    <hr>
-
-    <h2>@lists</h2>
-
-    <!--<div style ="height: 30vh;">
-    Here's My list
-    <div>1. Item One</div>
-    <div>2. Item Two</div>
-    <div>3. Item Three</div>
-    </div>-->
-
-    <h3>unordered list</h3>
-
-    <ul class="list-non-bullet">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-    </ul>
-
-    <h3>unordered Inline list</h3>
-
-    <ul class="list-item-inline">
-        <li class="list-item-inline">Inline Item One</li>
-        <li class="list-item-inline">Inline Item Two</li>
-        <li class="list-item-inline">Inline Item Three</li>
-    </ul>
-
-    <h3>Reverse ordered list</h3>
-
-    <ol reversed>
-        <li>Milk</li>
-        <li>Eggs</li>
-        <li>break</li>
-    </ol>
-
-    <hr>
-
-    <h2>@nav</h2>
-
     <nav class="navigation container">
         <!--Links important for traversing inside the website 
     are listed, It's like a Navigation bar/ space with Links -->
-        <div class="nav-brand">iAmBrand</div>
+        <div class="nav-brand">YashMalhotra.Dev</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link" href="/">home</a>
+                <a class="link" href="/">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">products</a>
+                <a class="link" href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/">about</a>
+                <a class="link link-active" href="/blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
 
-    <hr>
-
-    <h2>@header</h2>
-
     <header class="hero">
         <img class="hero-img" src="images/hero_image.svg" />
-        <!--<img src ="https://pbs.twimg.com/profile_banners/1311566029/1584937993/1500x500" />-->
+
         <h1 class="hero-heading"> Yash Malhotra the <span class="heading-inverted">Web Developer</span> </h1>
-        <!--span is like an inline <div> tag -->
+
     </header>
 
-    <hr>
-
-    <h2>@section</h2>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>Technologies</h1>
+            <p>I am familiar with HTML5, CSS3, Git & Github, Javascript, NodeJs, ReactJs & Web Hosting Python, SQL, Azure.</p>
+        </div>
+    </section>
 
     <section class="section">
         <div class="container container-center">
-            <h1>white section</h1>
-            <p>This will have white background</p>
+            <h1>Projects</h1>
+            <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
+            <a class="link link-primary" href="/">See Projects</a>
         </div>
 
     </section>
 
     <section class="section ow">
-        <div class="container container-center"></div>
-        <h1>off white section</h1>
-        <p>This will have gray background.</p>
+        <div class="container container-center">
+            <h1>My TechBlogs</h1>
+            <p>I am also working on some technical and non-technical blogs. I like to document my journey of learning.</p>
+            <a class="link link-secondary" href="/">Read My TechBlogs</a>
         </div>
     </section>
-    <hr>
-    <!--In footer try we don't use <h1> & <h2> orr headings specifically -->
-    <h2>@footer</h2>
 
     <footer class="footer">
-        <div>Some small heading inside footer</div>
+        <div>Get in Touch</div>
         <ul class="list-non-bullet">
-            <li class="list-item-inline"><a class="link" href="/">socialone</a></li>
-            <li class="list-item-inline"><a class="link" href="/">socialtwo</a></li>
-            <li class="list-item-inline"><a class="link" href="/">socialthree</a></li>
-            <li class="list-item-inline"><a class="link" href="/">socialfour</a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://github.com/Yashmalhotra98"><i class="fab fa-github-square fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://www.linkedin.com/in/yash-malhotra-tech/"><i class="fab fa-linkedin fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://www.instagram.com/yash.malhotra_/"><i class="fab fa-instagram-square fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://twitter.com/Yash_malhotra_"><i class="fab fa-twitter-square fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="mailto:blackhacker1998@gmail.com"><i class="fas fa-inbox fa-3x"></i></a></li>
         </ul>
     </footer>
+
+
 </body>
 
 </html>
