updated: projects, blog pages

--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Yash Malhotra.Dev</title>
+    <title>Home | YashMalhotra.Dev</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="/style.css" rel="stylesheet" />
 </head>
 
 <body>
     <nav class="navigation container">
-        <!--Links important for traversing inside the website 
-    are listed, It's like a Navigation bar/ space with Links -->
+
         <div class="nav-brand">YashMalhotra.Dev</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link" href="/">Home</a>
+                <a class="link link-active" href="/index.html">Home</a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/blogs.html">Blogs</a>
+                <a class="link " href="/blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
