--- a/lib/projects.html
+++ b/lib/projects.html
@@ -5,14 +5,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Projects | YashMalhotra.Dev</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link href="/style.css" rel="stylesheet" />
 </head>
 
 <body>
+
+    <nav class="navigation container">
+
+        <div class="nav-brand">YashMalhotra.Dev</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link" href="/index.html">Home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/projects.html">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link " href="/blogs.html">Blogs</a>
+            </li>
+        </ul>
+    </nav>
+
     <header class="hero">
-        <img class="hero-img" src="images/hero_image.svg" />
-        <h1 class="hero-heading"> Yash Malhotra the <span class="heading-inverted">Web Developer</span> </h1>
+        <h1 class="hero-heading"> Have a Look at <span class="heading-inverted"> my Code</span> </h1>
     </header>
+
+    <ul class="list-non-bullet">
+        <div class="container container-center margin-md">
+            <li>
+                <h1>TechQuiz</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark2</strong>
+                <p>A CLI app built with <strong>nodeJS</strong>. You can share this to your friends and find out who is a real TechGeek.</p>
+
+
+                <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/TechQuizShuffling#index.js">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p2-quiz-Tech-quiz">View Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center margin-md">
+            <li>
+                <h1>How well do you know me?</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark1</strong>
+                <p>A CLI app built with <strong>nodeJS</strong>. You can share this to your friends and find out who really knows you.</p>
+
+
+                <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/HowMuchYouKnowMe#index.js">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p1-quiz-how-well-do-you-know-me">View Source Code</a>
+            </li>
+        </div>
+    </ul>
+
 </body>
 
 </html>
