--- a/projects.html
+++ b/projects.html
@@ -32,32 +32,45 @@
         <h1 class="hero-heading"> Have a Look at <span class="heading-inverted"> my Code</span> </h1>
     </header>
 
-    <ul class="list-non-bullet">
-        <div class="container container-center margin-md">
-            <li>
-                <h1>TechQuiz</h1>
-                <small>September, 2021</small>
-                <br>
-                <strong>#mark2</strong>
-                <p>A CLI app built with <strong>nodeJS</strong>. You can share this to your friends and find out who is a real TechGeek.</p>
-                <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/TechQuizShuffling#index.js">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p2-quiz-Tech-quiz">View Source Code</a>
-            </li>
-        </div>
-        <div class="container container-center margin-md">
-            <li>
-                <h1>How well do you know me?</h1>
-                <small>September, 2021</small>
-                <br>
-                <strong>#mark1</strong>
-                <p>A CLI app built with <strong>nodeJS</strong>. You can share this to your friends and find out who really knows you.</p>
+    <div class="container container-center margin-md">
+        <ul class="list-non-bullet">
+            <div class="container container-center margin-md">
+                <li>
+                    <h1>TechQuiz</h1>
+                    <small>September, 2021</small>
+                    <br>
+                    <strong>#mark2</strong>
+                    <p>A CLI app built with <strong>nodeJS</strong>. You can share this to your friends and find out who is a real TechGeek.</p>
+                    <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/TechQuizShuffling#index.js">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p2-quiz-Tech-quiz">View Source Code</a>
+                </li>
+            </div>
+            <div class="container container-center margin-md">
+                <li>
+                    <h1>How well do you know me?</h1>
+                    <small>September, 2021</small>
+                    <br>
+                    <strong>#mark1</strong>
+                    <p>A CLI app built with <strong>nodeJS</strong>. You can share this to your friends and find out who really knows you.</p>
 
 
-                <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/HowMuchYouKnowMe#index.js">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p1-quiz-how-well-do-you-know-me">View Source Code</a>
-            </li>
-        </div>
-    </ul>
+                    <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/HowMuchYouKnowMe#index.js">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p1-quiz-how-well-do-you-know-me">View Source Code</a>
+                </li>
+            </div>
+        </ul>
+    </div>
+
+    <footer class="footer ">
+        <div>Get in Touch</div>
+        <ul class="list-non-bullet">
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://github.com/Yashmalhotra98"><i class="fab fa-github-square fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://www.linkedin.com/in/yash-malhotra-tech/"><i class="fab fa-linkedin fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://www.instagram.com/yash.malhotra_/"><i class="fab fa-instagram-square fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://twitter.com/Yash_malhotra_"><i class="fab fa-twitter-square fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="mailto:blackhacker1998@gmail.com"><i class="fas fa-inbox fa-3x"></i></a></li>
+        </ul>
+    </footer>
 
 </body>
 
