update: projects & blogs footer

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
         </ul>
     </div>
 
-    <footer class="footer ">
+    <footer class="footer margin-tp">
         <div>Get in Touch</div>
         <ul class="list-non-bullet">
             <li class="list-item-inline"><a class="link" target="_blank" href="https://github.com/Yashmalhotra98"><i class="fab fa-github-square fa-3x"></i></a></li>
