--- a/blogs.html
+++ b/blogs.html
@@ -35,6 +35,8 @@
             <li>
                 <h1>Data Engineering Project for CoVid-19 using Azure ADF</h1>
                 <small>June, 2021</small>
+                <br>
+                <strong>#mark5</strong>
                 <p>The project shows Population Data, Testing Done till the available Date, Hospital admissions, No. of active cases, Total No. of cases & Deaths. I will be improving upon this project by adding more countries to it with credible data sources
                     that I can find for the above-given Parameters & will be adding! more parameter of “No. of People vaccinated till date”. If you guys know such sources please comment below & do leave your reviews. It was fun creating a fully automated
                     ETL Task as well as creating Data pipelines on azure and visualizing them on PowerBI.</p>
@@ -44,6 +46,16 @@
         </div>
     </ul>
 
+    <footer class="footer margin-tp">
+        <div>Get in Touch</div>
+        <ul class="list-non-bullet">
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://github.com/Yashmalhotra98"><i class="fab fa-github-square fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://www.linkedin.com/in/yash-malhotra-tech/"><i class="fab fa-linkedin fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://www.instagram.com/yash.malhotra_/"><i class="fab fa-instagram-square fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="https://twitter.com/Yash_malhotra_"><i class="fab fa-twitter-square fa-3x"></i></a></li>
+            <li class="list-item-inline"><a class="link" target="_blank" href="mailto:blackhacker1998@gmail.com"><i class="fas fa-inbox fa-3x"></i></a></li>
+        </ul>
+    </footer>
 
 
 </body>
