--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,20 @@
     </header>
 
     <div class="container container-center margin-md">
+
         <ul class="list-non-bullet">
+            <div class="container container-center margin-md">
+                <li>
+                    <h1>YashMalhotra.Dev-Personal Portfolio</h1>
+                    <small>September, 2021</small>
+                    <br>
+                    <strong>#mark4</strong>
+                    <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                    <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio">View Source Code</a>
+                </li>
+            </div>
+
             <div class="container container-center margin-md">
                 <li>
                     <h1>TechQuiz</h1>
@@ -58,7 +71,11 @@
                     <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p1-quiz-how-well-do-you-know-me">View Source Code</a>
                 </li>
             </div>
+
+
         </ul>
+
+
     </div>
 
     <footer class="footer margin-tp">
