--- a/blogs.html
+++ b/blogs.html
@@ -28,7 +28,7 @@
     </nav>
 
     <header class="hero">
-        <h1 class="hero-heading"> My <span class="heading-inverted">blogs</span> </h1>
+        <h1 class="hero-heading"> My <span class="heading-inverted">Blogs</span> </h1>
     </header>
     <ul class="list-non-bullet">
         <div class="container container-center margin-md">
