update index page projects & blogs link

--- a/index.html
+++ b/index.html
@@ -1,75 +1,133 @@
-<!DOCTYPE html>
-<html lang="en">
+< !DOCTYPE html >
+    <
+    html lang = "en" >
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | YashMalhotra.Dev</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link href="/style.css" rel="stylesheet" />
-</head>
+    <
+    head >
+    <
+    meta charset = "UTF-8" >
+    <
+    meta http - equiv = "X-UA-Compatible"
+content = "IE=edge" >
+    <
+    meta name = "viewport"
+content = "width=device-width, initial-scale=1.0" >
+    <
+    title > Home | YashMalhotra.Dev < /title> <
+    link rel = "stylesheet"
+href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+integrity = "sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+crossorigin = "anonymous"
+referrerpolicy = "no-referrer" >
+    <
+    link href = "/style.css"
+rel = "stylesheet" / >
+    <
+    /head>
 
-<body>
-    <nav class="navigation container">
+<
+body >
+    <
+    nav class = "navigation container" >
 
-        <div class="nav-brand">YashMalhotra.Dev</div>
-        <ul class="list-non-bullet nav-pills">
-            <li class="list-item-inline">
-                <a class="link link-active" href="/index.html">Home</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="/projects.html">Projects</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link " href="/blogs.html">Blogs</a>
-            </li>
-        </ul>
-    </nav>
+    <
+    div class = "nav-brand" > YashMalhotra.Dev < /div> <
+    ul class = "list-non-bullet nav-pills" >
+    <
+    li class = "list-item-inline" >
+    <
+    a class = "link link-active"
+href = "/index.html" > Home < /a> <
+    /li> <
+    li class = "list-item-inline" >
+    <
+    a class = "link"
+href = "/projects.html" > Projects < /a> <
+    /li> <
+    li class = "list-item-inline" >
+    <
+    a class = "link "
+href = "/blogs.html" > Blogs < /a> <
+    /li> <
+    /ul> <
+    /nav>
 
-    <header class="hero">
-        <img class="hero-img" src="images/hero_image.svg" />
+<
+header class = "hero" >
+    <
+    img class = "hero-img"
+src = "images/hero_image.svg" / >
 
-        <h1 class="hero-heading"> Yash Malhotra the <span class="heading-inverted">Web Developer</span> </h1>
+    <
+    h1 class = "hero-heading" > Yash Malhotra the < span class = "heading-inverted" > Web Developer < /span> </h
+1 >
 
-    </header>
+    <
+    /header>
 
-    <section class="section ow">
-        <div class="container container-center">
-            <h1>Technologies</h1>
-            <p>I am familiar with HTML5, CSS3, Git & Github, Javascript, NodeJs, ReactJs & Web Hosting Python, SQL, Azure.</p>
-        </div>
-    </section>
+<
+section class = "section ow" >
+    <
+    div class = "container container-center" >
+    <
+    h1 > Technologies < /h1> <
+    p > I am familiar with HTML5, CSS3, Git & Github, Javascript, NodeJs, ReactJs & Web Hosting Python, SQL, Azure. < /p> <
+    /div> <
+    /section>
 
-    <section class="section">
-        <div class="container container-center">
-            <h1>Projects</h1>
-            <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
-            <a class="link link-primary" href="/">See Projects</a>
-        </div>
+<
+section class = "section" >
+    <
+    div class = "container container-center" >
+    <
+    h1 > Projects < /h1> <
+    p > I like to showcase my work and thus, you can see my projects hosted online. < /p> <
+    a class = "link link-primary"
+href = "/projects.html" > See Projects < /a> <
+    /div>
 
-    </section>
+<
+/section>
 
-    <section class="section ow">
-        <div class="container container-center">
-            <h1>My TechBlogs</h1>
-            <p>I am also working on some technical and non-technical blogs. I like to document my journey of learning.</p>
-            <a class="link link-secondary" href="/">Read My TechBlogs</a>
-        </div>
-    </section>
+<
+section class = "section ow" >
+    <
+    div class = "container container-center" >
+    <
+    h1 > My TechBlogs < /h1> <
+    p > I am also working on some technical and non - technical blogs.I like to document my journey of learning. < /p> <
+    a class = "link link-secondary"
+href = "/blogs.html" > Read My TechBlogs < /a> <
+    /div> <
+    /section>
 
-    <footer class="footer">
-        <div>Get in Touch</div>
-        <ul class="list-non-bullet">
-            <li class="list-item-inline"><a class="link" target="_blank" href="https://github.com/Yashmalhotra98"><i class="fab fa-github-square fa-3x"></i></a></li>
-            <li class="list-item-inline"><a class="link" target="_blank" href="https://www.linkedin.com/in/yash-malhotra-tech/"><i class="fab fa-linkedin fa-3x"></i></a></li>
-            <li class="list-item-inline"><a class="link" target="_blank" href="https://www.instagram.com/yash.malhotra_/"><i class="fab fa-instagram-square fa-3x"></i></a></li>
-            <li class="list-item-inline"><a class="link" target="_blank" href="https://twitter.com/Yash_malhotra_"><i class="fab fa-twitter-square fa-3x"></i></a></li>
-            <li class="list-item-inline"><a class="link" target="_blank" href="mailto:blackhacker1998@gmail.com"><i class="fas fa-inbox fa-3x"></i></a></li>
-        </ul>
-    </footer>
+<
+footer class = "footer" >
+    <
+    div > Get in Touch < /div> <
+    ul class = "list-non-bullet" >
+    <
+    li class = "list-item-inline" > < a class = "link"
+target = "_blank"
+href = "https://github.com/Yashmalhotra98" > < i class = "fab fa-github-square fa-3x" > < /i></a > < /li> <
+    li class = "list-item-inline" > < a class = "link"
+target = "_blank"
+href = "https://www.linkedin.com/in/yash-malhotra-tech/" > < i class = "fab fa-linkedin fa-3x" > < /i></a > < /li> <
+    li class = "list-item-inline" > < a class = "link"
+target = "_blank"
+href = "https://www.instagram.com/yash.malhotra_/" > < i class = "fab fa-instagram-square fa-3x" > < /i></a > < /li> <
+    li class = "list-item-inline" > < a class = "link"
+target = "_blank"
+href = "https://twitter.com/Yash_malhotra_" > < i class = "fab fa-twitter-square fa-3x" > < /i></a > < /li> <
+    li class = "list-item-inline" > < a class = "link"
+target = "_blank"
+href = "mailto:blackhacker1998@gmail.com" > < i class = "fas fa-inbox fa-3x" > < /i></a > < /li> <
+    /ul> <
+    /footer>
 
 
-</body>
+<
+/body>
 
-</html>
+<
+/html>
