--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark2</strong>
-                <p>A CLI app built with <strong>nodeJS</strong>. You can share this to your friends and find out who is a real TechGeek.</p>
+                <p>A CLI app built with <strong>nodeJS</strong>. You can share this to your friends and find out If you are a real TechGeek.</p>
                 <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/Mark2-Tech-Quiz#index.js">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p2-quiz-Tech-quiz">View Source Code</a>
             </li>
