update projects.html links target to blank

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
                 <strong>#mark4</strong>
                 <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
                 <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio">View Source Code</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
             </li>
         </div>
 
@@ -54,8 +54,8 @@
                 <br>
                 <strong>#mark2</strong>
                 <p>A CLI app built with <strong>nodeJS</strong>. You can share this to your friends and find out If you are a real TechGeek.</p>
-                <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/Mark2-Tech-Quiz#index.js">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p2-quiz-Tech-quiz">View Source Code</a>
+                <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/Mark2-Tech-Quiz#index.js" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p2-quiz-Tech-quiz" target="_blank">View Source Code</a>
             </li>
         </div>
         <div class="container container-center margin-md">
@@ -67,8 +67,8 @@
                 <p>A CLI app built with <strong>nodeJS</strong>. You can share this to your friends and find out who really knows you.</p>
 
 
-                <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/HowMuchYouKnowMe#index.js">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p1-quiz-how-well-do-you-know-me">View Source Code</a>
+                <a class="link link-primary" href="https://replit.com/@Yashmalhotra98/HowMuchYouKnowMe#index.js" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/p1-quiz-how-well-do-you-know-me" target="_blank">View Source Code</a>
             </li>
         </div>
 
