upaded projects.html, added new projects

--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,105 @@
     <ul class="list-non-bullet">
         <div class="container container-center margin-md">
             <li>
+                <h1>Stocks Profit & Loss Calculator App</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark14</strong>
+                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center margin-md">
+            <li>
+                <h1>Palindrome Birthdate Checker</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark13</strong>
+                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center margin-md">
+            <li>
+                <h1>Fun with Triangles/h1>
+                    <small>September, 2021</small>
+                    <br>
+                    <strong>#mark12</strong>
+                    <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                    <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center margin-md">
+            <li>
+                <h1>Lucky Birthdate Checker</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark11</strong>
+                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center margin-md">
+            <li>
+                <h1>Cash Register App</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark10</strong>
+                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center margin-md">
+            <li>
+                <h1>mySpotify</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark9</strong>
+                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center margin-md">
+            <li>
+                <h1>Emoji Dictionary</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark8</strong>
+                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center margin-md">
+            <li>
+                <h1>Pirate Translator</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark7</strong>
+                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center margin-md">
+            <li>
+                <h1>Minion Speaks</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark6</strong>
+                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+            </li>
+        </div>
+        <div class="container container-center margin-md">
+            <li>
                 <h1>YashMalhotra.Dev-Personal Portfolio</h1>
                 <small>September, 2021</small>
                 <br>
