fix: projects.html mark12 h1 tag closed

--- a/projects.html
+++ b/projects.html
@@ -59,13 +59,13 @@
         </div>
         <div class="container container-center margin-md">
             <li>
-                <h1>Fun with Triangles/h1>
-                    <small>September, 2021</small>
-                    <br>
-                    <strong>#mark12</strong>
-                    <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
-                    <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/">Live Project</a>
-                    <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+                <h1>Fun with Triangles</h1>
+                <small>September, 2021</small>
+                <br>
+                <strong>#mark12</strong>
+                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
             </li>
         </div>
         <div class="container container-center margin-md">
