update: projects.html added more projects

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 
     <nav class="navigation container">
 
-        <div class="nav-brand">YashMalhotra.Dev</div>
+        <div class="nav-brand">YashMalhotra</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/index.html">Home</a>
@@ -42,8 +42,8 @@
                 <br>
                 <strong>#mark14</strong>
                 <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
-                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+                <a class="link link-primary" href="https://mark-14-profit-and-loss-calculator.netlify.app" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-14-Stocks-Profit-and-Loss" target="_blank">View Source Code</a>
             </li>
         </div>
         <div class="container container-center margin-md">
@@ -53,8 +53,8 @@
                 <br>
                 <strong>#mark13</strong>
                 <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
-                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+                <a class="link link-primary" href="https://mark13-birthday-palindrome.netlify.app" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-13-Palindrome-Birthday" target="_blank">View Source Code</a>
             </li>
         </div>
 
@@ -65,8 +65,8 @@
                 <br>
                 <strong>#mark12</strong>
                 <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
-                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+                <a class="link link-primary" href="https://mark12-triangles-website.netlify.app" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-12-fun-with-triangles" target="_blank">View Source Code</a>
             </li>
         </div>
 
@@ -77,8 +77,8 @@
                 <br>
                 <strong>#mark11</strong>
                 <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
-                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+                <a class="link link-primary" href="https://mark11-lucky-birthday.netlify.app" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-11-is-your-birthday-lucky" target="_blank">View Source Code</a>
             </li>
         </div>
         <div class="container container-center margin-md">
@@ -88,8 +88,8 @@
                 <br>
                 <strong>#mark10</strong>
                 <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
-                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+                <a class="link link-primary" href="https://mark10-cash-register-dark-theme.netlify.app" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-10-cash-register-app" target="_blank">View Source Code</a>
             </li>
         </div>
         <div class="container container-center margin-md">
@@ -99,8 +99,8 @@
                 <br>
                 <strong>#mark9</strong>
                 <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
-                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+                <a class="link link-primary" href="https://lp19t.csb.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://codesandbox.io/s/mark9-react-app-lp19t" target="_blank">View Source Code</a>
             </li>
         </div>
         <div class="container container-center margin-md">
@@ -110,8 +110,8 @@
                 <br>
                 <strong>#mark8</strong>
                 <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
-                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+                <a class="link link-primary" href="https://yfsmh.csb.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://codesandbox.io/s/emojipedia-in-react-yfsmh?file=/src/App.js" target="_blank">View Source Code</a>
             </li>
         </div>
         <div class="container container-center margin-md">
@@ -121,8 +121,8 @@
                 <br>
                 <strong>#mark7</strong>
                 <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
-                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+                <a class="link link-primary" href="https://mark7-pirates-translation-app.netlify.app/" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-7-pirates-translation-app" target="_blank">View Source Code</a>
             </li>
         </div>
         <div class="container container-center margin-md">
@@ -132,13 +132,13 @@
                 <br>
                 <strong>#mark6</strong>
                 <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
-                <a class="link link-primary" href="https://yashmalhotra-dev-portfolio.netlify.app/" target="_blank">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/practice-HTML-CSS-Personal-Portfolio" target="_blank">View Source Code</a>
+                <a class="link link-primary" href="https://mark6-minion-speaks.netlify.app" target="_blank">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-6-minion-speaks" target="_blank">View Source Code</a>
             </li>
         </div>
         <div class="container container-center margin-md">
             <li>
-                <h1>YashMalhotra.Dev-Personal Portfolio</h1>
+                <h1>YashMalhotra-Personal Portfolio</h1>
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark4</strong>
